testsuite/tests/typing-unboxed/test.ml.reference

#                                                           external a : (int [@untagged]) -> unit = "a"
external b : (int32 [@unboxed]) -> unit = "b"
external c : (int64 [@unboxed]) -> unit = "c"
external d : (nativeint [@unboxed]) -> unit = "d"
external e : (float [@unboxed]) -> unit = "e"
type t = private int
external f : (t [@untagged]) -> unit = "f"
module M :
  sig
    external a : int -> (int [@untagged]) = "a"
    external b : (int [@untagged]) -> int = "b"
  end
#               Characters 110-166:
  ......struct
    external f : int -> (int [@untagged]) = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> (int [@untagged]) = "f" end
       is not included in
         sig external f : int -> int = "f" end
       Values do not match:
         external f : int -> (int [@untagged]) = "f"
       is not included in
         external f : int -> int = "f"
#           Characters 57-113:
  ......struct
    external f : (int [@untagged]) -> int = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : (int [@untagged]) -> int = "f" end
       is not included in
         sig external f : int -> int = "a" end
       Values do not match:
         external f : (int [@untagged]) -> int = "f"
       is not included in
         external f : int -> int = "a"
#           Characters 61-120:
  ......struct
    external f : float -> (float [@unboxed]) = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> (float [@unboxed]) = "f" end
       is not included in
         sig external f : float -> float = "f" end
       Values do not match:
         external f : float -> (float [@unboxed]) = "f"
       is not included in
         external f : float -> float = "f"
#           Characters 61-120:
  ......struct
    external f : (float [@unboxed]) -> float = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : (float [@unboxed]) -> float = "f" end
       is not included in
         sig external f : float -> float = "a" end
       Values do not match:
         external f : (float [@unboxed]) -> float = "f"
       is not included in
         external f : float -> float = "a"
#               Characters 141-183:
  ......struct
    external f : int -> int = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> int = "f" end
       is not included in
         sig external f : int -> (int [@untagged]) = "f" end
       Values do not match:
         external f : int -> int = "f"
       is not included in
         external f : int -> (int [@untagged]) = "f"
#           Characters 71-113:
  ......struct
    external f : int -> int = "a"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> int = "a" end
       is not included in
         sig external f : (int [@untagged]) -> int = "f" end
       Values do not match:
         external f : int -> int = "a"
       is not included in
         external f : (int [@untagged]) -> int = "f"
#           Characters 74-120:
  ......struct
    external f : float -> float = "f"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> float = "f" end
       is not included in
         sig external f : float -> (float [@unboxed]) = "f" end
       Values do not match:
         external f : float -> float = "f"
       is not included in
         external f : float -> (float [@unboxed]) = "f"
#           Characters 74-120:
  ......struct
    external f : float -> float = "a"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> float = "a" end
       is not included in
         sig external f : (float [@unboxed]) -> float = "f" end
       Values do not match:
         external f : float -> float = "a"
       is not included in
         external f : (float [@unboxed]) -> float = "f"
#       Characters 67-72:
  external g : (float [@untagged]) -> float = "g";;
                ^^^^^
Error: Don't know how to untag this type. Only int can be untagged
# Characters 14-17:
  external h : (int [@unboxed]) -> float = "h";;
                ^^^
Error: Don't know how to unbox this type. Only float, int32, int64 and nativeint can be unboxed
#   *     external i : int -> float = "i"
# external j : int -> float * float = "j"
# external k : int -> float = "k"
# 
